# reflex-chat

./: reflex-server-servant.nix  reflex-server-wai.nix  reflex-server-websocket.nix  servant-reflex.nix
backend/: backend.cabal  backend.nix  common.nix  default.nix  shell.nix
backend/src/Backend/: MyAPI1.hs  MyAPI2.hs
backend/src/Util/: List.hs
common/: common.cabal  common.nix  default.nix  shell.nix
common/src/Common/Servant/: API.hs
common/src/Common/WebSocket/: Message.hs
frontend/: .ghci  default.nix  frontend.cabal  frontend.nix  run.sh  shell.nix
frontend/exe/: Main.hs
frontend/src/: ChatWidget.hs
frontend/src/Util/: Run.hs
