name:                common
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Dave Laing
maintainer:          dave.laing.80@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Common.Servant.API
                     , Common.WebSocket.Message
  build-depends:       base          >= 4.9  && < 4.10
                     , aeson         >= 1.2  && < 1.3
                     , binary        >= 0.8  && < 0.9
                     , servant       >= 0.11 && < 0.12
                     , reflex-binary >= 0.1 && < 0.2
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010


